[ci skip] fix immutable list lol